salesforce/generated/sunrun_ingest_api/objects/hubbell_account_Product__dll/hubbell_account_Product__dll.object-meta.xml
<CustomObject>
    <label>hubbell_account_Product</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>