salesforce/generated/sunrun_ingest_api/objects/hubbell_account_Product__dll/fields/IsActiveProduct__c.field-meta.xml
<CustomField>
    <fullName>IsActiveProduct__c</fullName>
    <label>IsActiveProduct</label>
    <defaultValue>false</defaultValue>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>IsActiveProduct</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>