salesforce/generated/sunrun_ingest_api/objects/hubbell_account_Product__dll/fields/ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>ProductSKU__c</fullName>
    <label>ProductSKU</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ProductSKU</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>