salesforce/generated/sunrun_ingest_api/objects/hubbell_account_Product__dll/fields/ProductSubcategory__c.field-meta.xml
<CustomField>
    <fullName>ProductSubcategory__c</fullName>
    <label>ProductSubcategory</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>ProductSubcategory</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>